# VLCaption

./: LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: redesign-2026-07.md
extension/: vlcaption.lua
tests/: test_cli.py  test_embed.py  test_engines.py  test_env.py  test_install.py  test_progress.py  test_progressive.py  test_server.py  test_srt.py
vlcaption/: __init__.py  __main__.py  cli.py  embed.py  env.py  install.py  media.py  server.py  srt.py  transcriber.py  vlc.py  watcher.py
vlcaption/engines/: __init__.py  base.py  parakeet.py  silicon.py  whisper_ct2.py  whisper_mlx.py
vlcaption/extension/: vlcaption.lua
