[project]

name = "vlcaption"
description = "Auto-generate subtitles for VLC using fast, fully-local speech-to-text (Parakeet + Whisper)"
authors = [
    { name = "WT-MM" },
]
keywords = ["vlc", "subtitles", "whisper", "parakeet", "speech-to-text", "srt", "transcription", "mlx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.11"
dynamic = ["version"]
dependencies = [
    "flask>=3.0",
    "faster-whisper>=1.0.0",
]

[project.urls]

Repository = "https://github.com/WT-MM/VLCaption"

[project.optional-dependencies]

dev = [
    "ruff",
    "mypy",
    "pytest",
]
mlx = [
    "silicon-asr>=0.1",
    "mlx-whisper>=0.4",
    "parakeet-mlx>=0.5",
]

[project.scripts]

vlcaption = "vlcaption.cli:main"
# Hyphenated aliases; the extension's launcher uses vlcaption-server.
vlcaption-server = "vlcaption.server:main"
vlcaption-watch = "vlcaption.watcher:main"
vlcaption-embed = "vlcaption.embed:main"
vlcaption-install = "vlcaption.install:main"

[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

include-package-data = true

[tool.setuptools.packages.find]

where = ["."]
include = ["vlcaption*"]

[tool.setuptools.package-data]

"vlcaption" = ["*.py", "*.txt", "py.typed", "extension/*.lua"]

[tool.setuptools.dynamic]

version = {attr = "vlcaption.__version__"}

[tool.pytest.ini_options]

addopts = "-rx -rf -x -q --full-trace"
testpaths = ["tests"]

markers = [
    "slow: Marks test as being slow",
]

[tool.mypy]

pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
show_traceback = true
disallow_untyped_defs = true
strict_equality = true
allow_redefinition = true

warn_unused_ignores = true
warn_redundant_casts = true

incremental = true
namespace_packages = false

# Optional engine dependencies: untyped when installed (macOS), absent on
# CI/Linux — an inline ignore can't cover both error codes.
[[tool.mypy.overrides]]

module = ["faster_whisper", "mlx_whisper", "parakeet_mlx"]
ignore_missing_imports = true

[tool.ruff]

line-length = 120
target-version = "py311"

[tool.ruff.format]

quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]

select = ["ANN", "D", "E", "F", "G", "I", "N", "PGH", "PLC", "PLE", "PLR", "PLW", "W"]

ignore = [
    "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "N812", "N817",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "PLW0603", "PLW2901",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]

known-first-party = ["vlcaption", "tests"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]

convention = "google"
